# scRatio

./: .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  Makefile  README.md  README.rst  project_folder  pyproject.toml  requirements.txt  requirements_dev.txt  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
experiments/differential_abundance/: utils_scratio.py
notebooks/: dimension_test.ipynb  pbmc_10M_exploration.ipynb  scCFM_pbmc10m_single_condition.ipynb  scCFM_test_dataset.ipynb  scFM_test_dataset.ipynb
notebooks/Neurips/: batch_correction_eval.ipynb  generate_concatenated_plots.ipynb  utils.py
notebooks/cElegans/: batch_correction_eval.ipynb  generate_concatenated_plots.ipynb
notebooks/combosciplex/: ae_training.ipynb  choose_best_model.ipynb  scCFM_combosciplex.ipynb  vae_training.ipynb
notebooks/combosciplex_bio/: ae_training.ipynb  custom_reconstruction_experiment.ipynb  scvi_training.ipynb
notebooks/combosciplex_latent/: vae_training_new.ipynb
notebooks/differential_abundance_analysis/: evaluate_models.ipynb  evaluate_scRatio_sweeps.ipynb  model_evaluation.py  preprocess_dataset_neurips.ipynb  preprocess_dataset_pbmc68k.ipynb  scRatio_train.ipynb  sweep_milo.ipynb  test_meld.ipynb  train_MELD.ipynb  train_milo.ipynb  train_mr_vi.ipynb  train_mrvi.ipynb  utils.py
notebooks/first_steps/: moons_dataset.ipynb
notebooks/gaussian_tests/: all_results.csv  analyze_sweeps.ipynb  compare_reparametrization.ipynb  compare_schedules.ipynb  compare_schedules_new.ipynb  compare_sweep.ipynb  concatenated_results.csv  distribution_comparison.ipynb  gaussian_results.csv  gaussian_results_old.csv  magnitude_vs_loss.ipynb  make_comparison_once.ipynb  results_time_score_matching_sweep.csv  sweep_results.csv
notebooks/icml_tests/: compare_sweep.ipynb  make_comparison.ipynb  make_comparison_once.ipynb  make_comparison_once_tests.ipynb  missed_files_from_checkpoints.ipynb  unconditional_field_simulation.ipynb
notebooks/independence_tests/: dep_run_indep_test.ipynb  indep_test_full_table.ipynb
notebooks/mi_estimation/: analyse_sweeps_tsm_ctsm.ipynb  evaluate_results.ipynb  evaluate_results_retrain.ipynb  gaussian_classifier_results.ipynb  gaussian_simulation.py  mi_dataset_creation.ipynb  scRatio_train.ipynb
notebooks/pbmc10m/: pbmc_10M_exploration.ipynb
notebooks/pbmc3k/: scCFM_pbmc3k.ipynb  scCFM_pbmc3k_v2.ipynb
notebooks/ratios_probability_paths_tests/: density_ratio_evaluation.ipynb  density_ratio_evaluation_2d.ipynb  lsm_path_1.ipynb  lsm_path_3.ipynb  lsm_path_uni.ipynb
notebooks/rebuttal_estimation_error_effect/: estimation_error_effect.ipynb  make_plot.ipynb  run_estimation_error_effect.py
notebooks/tests/: cfm_inverse_infection_state_sde.ipynb  density_ratio_evaluation.ipynb  density_ratio_evaluation_sigma_choice.ipynb  density_ratio_evaluation_sigma_min.ipynb  density_ratio_evaluation_special.ipynb  density_ratio_paths.ipynb  likelihood_evaluation.ipynb  lsm_path_2.ipynb  (+6 more)
tests/: __init__.py  test_scFM_density_estimation.py
(+179 files in other folders)
