[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scRatio"
version = "0.1.0"
description = "This is a project for density ratio estimation using Flow Matching."
readme = "README.rst"
authors = [
  {name = "Egor Antipov", email = "antipov.egor@gmail.com"}
]
maintainers = [
  {name = "Egor Antipov", email = "antipov.egor@gmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/Capibarin/scFM_density_estimation/issues"
changelog = "https://github.com/Capibarin/scFM_density_estimation/blob/master/changelog.md"
homepage = "https://github.com/Capibarin/scFM_density_estimation"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

