[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scRatio"
version = "0.1.0"
description = "Flow matching model for single-cell RNA-seq density estimation"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Egor Antipov", email = "antipov.egor@gmail.com"},
  {name = "Alessandro Palma", email = "alessandro.palma@helmholtz-munich.de"},
  {name = "Lorenzo Consoli", email = "lorenzo.consoli@helmholtz-munich.de"}
]
keywords = ["single-cell", "flow-matching", "density-estimation"]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "anndata==0.11.4",
    "lightning==2.4.0",
    "matplotlib==3.10.3",
    "numpy==2.0.2",
    "pandas==2.2.3",
    "scanpy==1.11.2",
    "scikit-learn==1.5.2",
    "seaborn==0.13.2",
    "torch==2.5.1",
    "torchdyn==1.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "jupyter>=1.0.0",
]

[project.urls]
Repository = "https://github.com/yourusername/scRatio"
Documentation = "https://github.com/yourusername/scRatio#readme"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src/scRatio"

[tool.isort]
profile = "black"
line_length = 100